# kumomta

./: .clippy.toml  .dockerignore  .drone.star  .drone.yml  .gitignore  404.html  CHANGELOG.md  CNAME  COPYRIGHT  Cargo.toml  DEVELOPERS.md  Dockerfile  INSTALLING.md  Makefile  README.md  cooldown.toml  dkim  example-private-dkim-key.pem  example-public-dkim-key.pem  generate-toc.py  get-deps.sh  index.html  inject-test.js  kumoinstall.sh  kumostart.sh  mkdocs-base.yml  mkdocs_macros.py  rust-toolchain.toml  selene.toml  simple_policy.lua  sink.lua  sitemap.xml  tags.json  tsa-torture.js  update-metrics.py  update-openapi.sh
crates/bounce-classify/: Cargo.toml
crates/bounce-classify/src/: lib.rs
crates/cidr-map/: Cargo.toml
crates/cidr-map/src/: lib.rs  map.rs  set.rs
crates/config/: Cargo.toml  build.rs
crates/config/src/: epoch.rs  lib.rs  pool.rs
crates/data-loader/: Cargo.toml  test-event.lua  test.lua
crates/data-loader/src/: lib.rs
crates/dir-probe/: Cargo.toml
crates/dir-probe/examples/: probe.rs
crates/dir-probe/src/: lib.rs
crates/dkim/: CHANGELOG.md  Cargo.toml  README.md
crates/dkim/.github/workflows/: cargo.yml
crates/dkim/benches/: sign.rs
crates/dkim/examples/: sign_bench.rs
crates/dkim/src/: arc.rs  bytes.rs  canonicalization.rs  dns.rs  errors.rs  hash.rs  header.rs  lib.rs  parsed_email.rs  parser.rs  public_key.rs  result.rs  roundtrip_test.rs  sign.rs
crates/dkim/test/: arc-example-2.eml  arc-example.eml
crates/dkim/test/keys/: 2022.txt
crates/dns-resolver/: Cargo.toml
crates/dns-resolver/src/: lib.rs  resolver.rs
crates/domain-map/: Cargo.toml
crates/domain-map/src/: lib.rs
crates/integration-tests/: Cargo.toml  arc.lua  broken-proxy-source.lua  broken-source.lua  dmarc.lua  dns-ptr.lua  gen_cert.sh  ha-proxy-source-hostname-all-fail.lua  ha-proxy-source-hostname-failover.lua  ha-proxy-source-hostname-family-mismatch.lua  ha-proxy-source-hostname.lua  maildir-sink.lua  mta-sts.lua  nats.lua  ndr.lua  plaintext-auth.lua  proxy-source.lua  proxy_auth.lua  proxy_init.lua  proxy_with_auth.lua  rewrite-ok.lua  rspamd.lua  shaping.toml  sink-dane.lua  sink.lua  socks5_source_with_proxy_hostname.lua  source-dane.lua  source-health-broken-proxy.lua  source-health-mixed-pool.lua  source-health-unplumbed.lua  source-idna.lua  source-inspect.lua  source-mxlist.lua  source-nats.lua  source-per-rcpt-metadata.lua  source-rcpt-meta.lua  source-rocks-spool.lua  source-watchdog.lua  source-xfer.lua  source.lua  (+6 more)
crates/integration-tests/src/: kumod.rs  kumoproxy.rs  main.rs  nats.rs  proxy.rs  rabbit.rs  rspamd.rs  tsa.rs  webhook.rs
crates/integration-tests/src/test/: allow_plaintext_auth.rs  arc.rs  auth_deliver.rs  auth_deliver_invalid_password.rs  bad_source_address.rs  broken_first_choice_mx.rs  dane.rs  eightbitmime.rs  (+72 more)
crates/kcli/: Cargo.toml
crates/kcli/src/: abort_ready_q_conn.rs  bounce.rs  bounce_cancel.rs  bounce_list.rs  inspect_message.rs  inspect_ready_q.rs  inspect_sched_q.rs  logfilter.rs  main.rs  provider_summary.rs  queue_summary.rs  rebind.rs  resolve_egress_path.rs  spool_compact.rs  suspend.rs  suspend_cancel.rs  suspend_list.rs  suspend_ready_q.rs  suspend_ready_q_cancel.rs  suspend_ready_q_list.rs  top.rs  trace_smtp_client.rs  trace_smtp_server.rs  xfer.rs  xfer_cancel.rs
crates/kumo-api-client/: Cargo.toml
crates/kumo-api-client/src/: lib.rs
crates/kumo-api-types/: Cargo.toml
crates/kumo-api-types/src/: egress_path.rs  lib.rs  rebind.rs  shaping.rs  suppression.rs  tsa.rs  xfer.rs
crates/kumo-dmarc/: Cargo.toml
crates/kumo-dmarc/src/: lib.rs  tests.rs
crates/kumo-log-tailer/: Cargo.toml
crates/kumo-log-tailer/src/: batch.rs  checkpoint.rs  decompress.rs  lib.rs  lua.rs  tailer.rs  writer.rs
crates/kumo-log-tailer/tests/: integration.rs  lua_integration.rs
crates/kumo-log-types/: Cargo.toml
crates/kumo-log-types/src/: lib.rs  rfc3464.rs  rfc5965.rs
crates/kumo-machine-info/: Cargo.toml
crates/kumo-machine-info/src/: lib.rs
crates/kumo-prometheus/: Cargo.toml
crates/kumo-prometheus/src/: counter.rs  counter_bundle.rs  gauge.rs  labels.rs  lib.rs  parser.rs  registry.rs
crates/kumo-server-common/: Cargo.toml  test_acl_hook_augment.lua  test_acl_hook_load_file.lua  test_acl_hook_nil.lua  test_acl_hook_no_fallback.lua  test_get_memory_limit.lua
crates/kumo-server-common/src/: acct.rs  authn_authz.rs  config_handle.rs  diagnostic_logging.rs  disk_space.rs  hashable_weak.rs  lib.rs  log.rs  nodeid.rs  panic.rs  start.rs  tls_helpers.rs
crates/kumo-server-lifecycle/: Cargo.toml
crates/kumo-server-lifecycle/src/: lib.rs
crates/kumo-server-memory/: Cargo.toml
crates/kumo-server-memory/src/: lib.rs  tracking.rs
crates/kumo-server-runtime/: Cargo.toml
crates/kumo-server-runtime/src/: lib.rs
crates/kumo-spf/: Cargo.toml
crates/kumo-spf/src/: context.rs  dns.rs  error.rs  eval.rs  lib.rs  record.rs  spec.rs  tests.rs
crates/kumo-template/: Cargo.toml  test-handlebars.lua  test-jinja.lua
crates/kumo-template/src/: lib.rs
crates/kumo-tls-helper/: Cargo.toml
crates/kumo-tls-helper/src/: lib.rs  traits.rs
crates/kumod/: Cargo.toml  test_apply_supplemental_header.lua  test_http_build_errors.lua  test_http_display_name_wrapping.lua
crates/kumod/src/: accounting.rs  cidrset.rs  delivery_metrics.rs  dest_site.rs  dmarc.rs  egress_path.rs  egress_source.rs  http_server.rs  lifecycle.rs  logging.rs  lua_config.rs  lua_deliver.rs  main.rs  metrics_helper.rs  mod_kumo.rs  mx.rs  queue.rs  ready_queue.rs  runtime.rs  shutdown.rs  smtp_dispatcher.rs  smtp_server.rs  spf.rs  spool.rs  tls_helpers.rs
crates/libunbound/: Cargo.toml
crates/libunbound-sys/: Cargo.toml  build.rs  config.h  import-unbound.sh  regenerate.sh
crates/libunbound-sys/src/: lib.rs
crates/libunbound/examples/: resolve.rs  resolve_async.rs  secure.rs
crates/libunbound/src/: lib.rs
crates/lruttl/: Cargo.toml
crates/lruttl/src/: lib.rs  metrics.rs
crates/maildir/: Cargo.toml  README.md
crates/maildir/examples/: explain.rs
crates/maildir/src/: lib.rs
crates/maildir/tests/: smoke.rs
(+9176 files in other folders)
