[workspace]
members = [
  "crates/bounce-classify",
  "crates/cidr-map",
  "crates/domain-map",
  "crates/integration-tests",
  "crates/kcli",
  "crates/kumo-chrono-helper",
  "crates/kumod",
  "crates/mailparsing",
  "crates/mod-uuid",
  "crates/mta-sts",
  "crates/proxy-server",
  "crates/regex-set-map",
  "crates/rfc5321",
  "crates/spool",
  "crates/tailer",
  "crates/throttle",
  "crates/timeq",
  "crates/tls-probe",
  "crates/toml2jsonc",
  "crates/traffic-gen",
  "crates/tsa-daemon",
  "crates/uuid-helper",
  "crates/validate-shaping",
  "crates/version-info",
]
resolver = "2"

[profile.release]
opt-level = 3
debug = 1 # include line tables for more meaningful backtraces

[workspace.dependencies]
axum = "0.7"
axum-client-ip = "0.6"
axum-server = "0.6"
data-encoding = "2.6"
ed25519-dalek = "2.0"
futures = "0.3.28"
gethostname = "0.4"
libunbound = {git="https://github.com/KumoCorp/libunbound-rs.git", rev="f00c353e7d0f37952206e41e3f4615edc1a606e4"}
metrics = "0.22"
mlua = "0.9"
nix = "0.28"
once_cell = "1.17"
openssl = { version="=0.10.65" } # pinned; see patch below
openssl-sys = { version="0.9" }
reqwest = {version="0.11", default-features=false, features=["rustls-tls"]}
rustls = "0.21"
sqlite = "0.32"
tempfile = "3.10"
tokio = "1.39"
tokio-rustls = "0.24"
# Be sure to update the link to the docs in docs/reference/kumo.dns/configure_resolver.md
# to match the version that we are using when you update this dep
hickory-resolver = "0.24"
hickory-proto = "0.24"
utoipa = {version="4", features=["axum_extras", "time", "uuid"]}
utoipa-rapidoc = { version="4.0", features = ["axum"] }
uuid = "1.4"
webpki-roots = "0.25"

[patch.crates-io]
# Can be removed once dane support is upstreamed
openssl = { version="0.10.65", git="https://github.com/KumoCorp/rust-openssl.git", branch="dane" }
# Can be removed once dane support is upstreamed
openssl-sys = { version="0.9", git="https://github.com/KumoCorp/rust-openssl.git", branch="dane" }
