[package]
name = "bounce-classify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7"
rfc5321 = {path="../rfc5321", default-features=false}
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
toml = "0.8"
