[package]
name = "bounce-classify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordermap = {version="0.5", features=["serde"]}
regex = "1.7"
rfc5321 = {path="../rfc5321", default-features=false}
serde = {workspace=true}
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
toml = "0.8"
