[package]
name = "cidr-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitstring = "0.1"
cidr = {version="0.2", features=["serde", "bitstring"]}
config = {path="../config"}
mlua = {workspace=true, features=["vendored", "lua54", "async", "send", "serialize"]}
mod-memoize = {path="../mod-memoize"}
serde = {version="1.0", features=["derive"]}

[dev-dependencies]
k9 = "0.11"
