[package]
name = "cidr-map"
version = "0.1.0"
edition = "2021"

[features]
default = ["lua"]
lua = ["dep:config", "dep:mlua", "dep:mod-memoize"]

[dependencies]
anyhow = {workspace=true}
bitstring = {workspace=true}
cidr = {workspace=true}
config = {path="../config", optional=true}
mlua = {workspace=true, features=["vendored", "lua54", "async", "send", "serialize"], optional=true}
mod-memoize = {path="../mod-memoize", optional=true}
serde = {workspace=true}

[dev-dependencies]
k9 = {workspace=true}
