[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lazy_static= "1.4"
metrics = {workspace=true}
mlua = {workspace=true, features=["vendored", "lua54", "async", "send", "serialize"]}
parking_lot = "0.12"
serde = "1.0"
serde_json = "1.0"
tokio = {workspace=true, features=["fs"]}
tracing = "0.1"

