[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
data-encoding = {workspace=true}
filenamegen = "0.2.7"
metrics = {workspace=true}
mlua = {workspace=true, features=["vendored", "lua54", "async", "send", "serialize"]}
parking_lot = "0.12"
prometheus = "0.13"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
tokio = {workspace=true, features=["fs"]}
tracing = "0.1"
