[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace=true}
data-encoding = {workspace=true}
filenamegen = {workspace=true}
linkme.workspace = true
metrics = {workspace=true}
mlua = {workspace=true, features=["vendored", "lua54", "async", "send", "serialize"]}
parking_lot = {workspace=true}
pastey.workspace = true
prometheus = {workspace=true}
rand = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
sha2 = {workspace=true}
tokio = {workspace=true, features=["fs", "rt", "sync", "time"]}
tracing = {workspace=true}
