[package]
name = "data-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
config = {path="../config"}
mlua = {version="0.8", features=["vendored", "lua54", "async", "send", "serialize"]}
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
tokio = {version="1.25", features=["fs"]}
vaultrs = "0.6"

[dev-dependencies]
tokio = {version="1.25", features=["fs", "io-std", "process", "macros"]}
