[package]
name = "data-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["impl"]
impl = ["dep:vaultrs", "dep:config", "dep:mlua", "dep:tokio"]

[dependencies]
anyhow = "1.0"
config = {path="../config", optional=true}
mlua = {workspace=true, features=["vendored", "lua54", "async", "send", "serialize"], optional=true}
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
tokio = {workspace=true, features=["fs"], optional=true}
vaultrs = {version="0.6", optional=true}

[dev-dependencies]
tokio = {workspace=true, features=["fs", "io-std", "process", "macros", "time", "io-util", "rt"]}
which = "4.4"
