[package]
name = "dir-probe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace=true}
tempfile = {workspace=true}

[target.'cfg(unix)'.dependencies]
nix = {workspace=true, features=["fs", "user"]}

[dev-dependencies]
k9 = {workspace=true}
nix = {workspace=true, features=["fs", "user"]}

[target.'cfg(target_os = "linux")'.dev-dependencies]
caps = {workspace=true}
