[package]
name = "kumo-dkim"
version = "0.3.0"
authors = ["Sven Sauleau <sven@cloudflare.com>"]
edition = "2021"
description = "DKIM (RFC6376) implementation"
repository = "https://github.com/cloudflare/dkim"
categories = ["email"]
keywords = ["email", "dkim", "authentification"]
readme = "README.md"
license = "MIT"

[features]

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std"] }
data-encoding = "2.5"
ed25519-dalek = {workspace=true, features=["pkcs8", "pem"]}
futures = {workspace=true}
indexmap = "1.9.3"
mailparsing = { path="../mailparsing" }
memchr = "2.5"
nom = "7.1.0"
once_cell = "1.17"
foreign-types = "0.3"
openssl = { workspace=true }
openssl-sys = { workspace=true }
quick-error = "2.0.1"
sha-1 = { version = "0.10", features = ["oid"] }
sha2 = { version = "0.10", features = ["oid"] }
textwrap = "0.16"
tracing = "0.1"
hickory-resolver = {workspace=true}

[dev-dependencies]
criterion = "0.5"
k9 = "0.12"
regex = "1"
tokio = { workspace=true, features = ["macros"] }

[[bench]]
name = "sign"
harness = false
