[package]
name = "dns-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Enable this feature to run real DNS lookups.
# Resulting tests may be flaky and, if the upstream
# has changed their records, may be wrong.
live-dns-tests = []
# Make the default configuration use unbound
default-unbound = []
#default = ["default-unbound"]

[dependencies]
anyhow = "1.0"
arc-swap = "1.6"
kumo-log-types = {path="../kumo-log-types"}
lazy_static = "1.4"
libunbound = {workspace=true}
lruttl = {path="../lruttl"}
serde = {version="1.0", features=["derive"]}
tokio = {workspace=true}
tracing = "0.1"
hickory-resolver = {workspace=true}

[dev-dependencies]
k9 = "0.11"
