[package]
name = "dns-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Enable this feature to run real DNS lookups.
# Resulting tests may be flaky and, if the upstream
# has changed their records, may be wrong.
live-dns-tests = []
# Make the default configuration use unbound
default-unbound = ["unbound"]
#default = ["default-unbound"]
unbound = ["dep:libunbound"]

[dependencies]
anyhow = "1.0"
arc-swap = "1.6"
kumo-log-types = {path="../kumo-log-types"}
libunbound = {workspace=true, optional=true}
lruttl = {path="../lruttl"}
rand = "0.8"
serde = {workspace=true}
tokio = {workspace=true, features=["macros"]}
tracing = "0.1"
hickory-resolver = {workspace=true}

[dev-dependencies]
k9 = "0.12"
