[package]
name = "dns-resolver"
version = "0.1.0"
edition = "2021"

[features]
# Enable this feature to run real DNS lookups.
# Resulting tests may be flaky and, if the upstream
# has changed their records, may be wrong.
live-dns-tests = []
# Make the default configuration use unbound
default-unbound = ["unbound"]
#default = ["default-unbound"]
unbound = ["dep:libunbound"]

[dependencies]
anyhow = {workspace=true}
arc-swap = {workspace=true}
async-trait = {workspace=true}
kumo-address = {path="../kumo-address"}
kumo-log-types = {path="../kumo-log-types"}
libunbound = {workspace=true, optional=true}
lruttl = {path="../lruttl"}
prometheus.workspace = true
rand = {workspace=true}
serde = {workspace=true}
thiserror = {workspace=true}
tokio = {workspace=true, features=["macros"]}
tracing = {workspace=true}
hickory-proto = {workspace=true, features = ["text-parsing"]} # need to enable the feature
hickory-resolver = {workspace=true}

[dev-dependencies]
k9 = {workspace=true}
