[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace=true}
axum = {workspace=true}
axum-server = {workspace=true}
chrono = {workspace=true, default-features=false, features=["std", "clock"]}
futures-lite = {workspace=true}
k9 = {workspace=true}
kumo-api-types = {path="../kumo-api-types"}
kumo-log-types = {path="../kumo-log-types"}
lapin.workspace = true
lipsum = {workspace=true}
maildir = {path="../maildir"}
mailparsing = {path="../mailparsing"}
nix = {workspace=true, features=["signal", "user"]}
rfc5321 = {path="../rfc5321"}
serde = {workspace=true}
serde_json = {workspace=true}
sqlite = {workspace=true}
testcontainers-modules = {workspace=true, default-features=false, features=["rabbitmq"]}
tempfile = {workspace=true}
textwrap = {workspace=true}
tokio = {workspace=true, features=["full"]}
tokio-executor-trait = {workspace=true}
tokio-reactor-trait = {workspace=true}
zstd = {workspace=true}
