[package]
name = "kcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = {version="0.4", default-features=false, features=["serde"]}
cidr-map = {path="../cidr-map"}
clap = {version="4.1", features=["derive"]}
dns-resolver = {path="../dns-resolver"}
futures = "0.3"
humantime = "2.1"
lexicmp = "0.1"
message = {path="../message"}
kumo-api-types = {path="../kumo-api-types"}
reqwest = {version="0.11", default-features=false, features=["json", "rustls-tls"]}
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
tabout = "0.3"
tokio = {version="1.25", features=["full", "tracing"]}
tungstenite = "0.20"
uuid = "1.3"
version-info = {path="../version-info"}
