[package]
name = "kcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = {version="0.4", default-features=false, features=["serde"]}
cidr-map = {path="../cidr-map", default-features=false}
clap = {version="4.5", features=["derive", "wrap_help"]}
clap-markdown = "0.1"
dns-resolver = {path="../dns-resolver"}
futures = "0.3"
humantime = "2.1"
lexicmp = "0.1"
message = {path="../message", default-features=false}
kumo-api-types = {path="../kumo-api-types", default-features=false}
reqwest = {workspace=true, default-features=false, features=["json", "rustls-tls"]}
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
tabout = "0.3"
tokio = {workspace=true, features=["full", "tracing"]}
tungstenite = "0.21"
uuid = {workspace=true}
version-info = {path="../version-info"}
ratatui = { version = "0.26.2", features = ["crossterm", "unstable-widget-ref"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
human_bytes = "0.4.3"
num-format = "0.4.4"

[dev-dependencies]
indoc = "2.0.5"
