[package]
name = "kcli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace=true}
bytes = {workspace=true}
chrono = {workspace=true, default-features=false, features=["serde"]}
cidr-map = {path="../cidr-map", default-features=false}
clap = {workspace=true}
clap-markdown = {workspace=true}
crossterm = {workspace=true}
dns-resolver = {path="../dns-resolver"}
futures = {workspace=true}
futures-util = {workspace=true}
human_bytes = {workspace=true}
humantime = {workspace=true}
lexicmp = {workspace=true}
message = {path="../message", default-features=false}
num-format = {workspace=true}
ordermap = {workspace=true}
kumo-api-types = {path="../kumo-api-types", default-features=false}
kumo-prometheus = {path="../kumo-prometheus"}
ratatui = {workspace=true}
reqwest = {workspace=true, default-features=false, features=["json", "rustls-tls", "stream"]}
serde = {workspace=true}
serde_json = {workspace=true}
tabout = {workspace=true}
tokio = {workspace=true, features=["full", "tracing"]}
tungstenite = {workspace=true}
uuid = {workspace=true}
version-info = {path="../version-info"}

[dev-dependencies]
indoc = {workspace=true}
