[package]
name = "kumo-api-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["lua"]
lua = ["dep:config", "dep:mlua", "dep:reqwest", "dep:dns-resolver"]

[dependencies]
anyhow = "1.0"
chrono = {version="0.4", default-features=false, features=["serde"]}
cidr-map = {path="../cidr-map", default-features=false}
config = {path="../config", optional=true}
data-encoding = {workspace=true}
data-loader = {path="../data-loader", default-features=false}
dns-resolver = {path="../dns-resolver", optional=true}
duration-serde = {path="../duration-serde"}
fancy-regex = "0.11"
futures-util = "0.3"
kumo-log-types = {path="../kumo-log-types"}
mlua = {workspace=true, features=["vendored", "lua54", "async", "send", "serialize"], optional=true}
mod-memoize = {path="../mod-memoize"}
reqwest = {workspace=true, default-features=false, features=["json", "rustls-tls"], optional=true}
rfc5321 = {path="../rfc5321", default-features=false}
rustls.workspace = true
openssl.workspace = true
ordermap = {version="0.5", features=["serde"]}
serde = {workspace=true}
serde_json = "1.0"
serde_path_to_error = "0.1"
serde_with = "3.4"
sha2 = "0.10"
toml = {version="0.8", features=["preserve_order"]}
tracing = "0.1"
tokio.workspace = true
spool = {path="../spool"}
throttle = {path="../throttle", default-features=false}
url = "2.4"
utoipa = {workspace=true}
uuid = {workspace=true, features=["serde"]}

[dev-dependencies]
k9 = "0.12"
tempfile.workspace = true
tokio = {workspace=true, features=["full"]}
