[package]
name = "kumo-dmarc"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {workspace=true}
dns-resolver = {path="../dns-resolver"}
instant-xml = {workspace=true}
kumo-spf = { path = "../kumo-spf" }
mailparsing = {path="../mailparsing"}
psl = {workspace=true}
serde = {workspace=true}
rand = {workspace=true}
uuid = {workspace=true, features=["v4", "fast-rng"]}

[dev-dependencies]
k9 = {workspace=true}
tokio = {workspace = true, features = ["full", "tracing"]}
